# page-compositor

./: .gitignore  configure.ac
protocol/: buffer-manager.xml  xdg-shell.xml
src/: Makefile.am  box.hxx  buffer-manager.cxx  buffer-manager.hxx  client.cxx  client.hxx  client_base.cxx  client_base.hxx  client_managed.cxx  client_managed.hxx  client_not_managed.cxx  client_not_managed.hxx  client_proxy.cxx  color.hxx  compositor.cxx  compositor.hxx  compositor_overlay.hxx  config-handler.cxx  config-handler.hxx  display-compositor.cxx  display-compositor.hxx  display.cxx  display.hxx  dropdown_menu.hxx  exception.hxx  grab_handlers.cxx  grab_handlers.hxx  icon_handler.hxx  key_desc.hxx  keyboard-grab-handler.cxx  keyboard-grab-handler.hxx  keymap.hxx  listener.hxx  notebook.cxx  notebook.hxx  page-compositor.cxx  page-configuration.hxx  page-context.hxx  page-root.cxx  page-root.hxx  (+115 more)
tools/: wayland-cxx-scanner.py
